Fri Mar 27 12:49:36 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* xappy/doctests/indexerconnection_doctest2.txt: Explicitly access
	  the hit data when trying to trigger DatabaseModifiedError - data
	  is now read lazily, so the test was failing with the new
	  tarballs.

Fri Mar 27 12:37:10 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* xappy/searchconnection.py: Update reset() to init() in posting
	  source, and handle missing field action in _get_approx_params.

Fri Mar 27 12:31:26 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* xappy/searchconnection.py: Add "assume_single_value" parameter to
	  _cluster(), to let it know that all fields in use are
	  single-valued.  Also, add support for doing range acceleration
	  searches using terms and values where the terms cover the range,
	  and the values are used to do a second-pass restriction.

Fri Mar 27 10:06:16 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* libs/get_xapian.py: Update with new tarballs.

Fri Mar 27 10:04:59 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* libs/build_xapian.sh: Set program-suffix to empty when building:
	  possibly we should use a special xappy suffix by default, but
	  we're installing locally in this script, anyway.

Fri Mar 27 09:29:29 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* xappy/searchconnection.py: Add support for new clustering method
	  for single-valued single fields, reading from a value slot; use
	  it automatically if index strategy makes this possible.

Fri Mar 27 09:26:34 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* xappy/unittests/cluster.py: Add test for clustering.

Fri Mar 27 08:29:08 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* utils/make_xappy_tarballs: Stop chasing a moving target - set the
	  trunk_revision to build tarballs for explicitly.

Tue Mar 24 14:48:12 GMT 2009  Richard Boulton <richard@lemurconsulting.com>
