@@ -63,15 +63,15 @@ archives = (
      'xapian-core/win32',
     ),
     ('Xapian extras',
-     'http://xappy.googlecode.com/files/xapian-extras-12109.tar.gz',
+     'http://xappy.googlecode.com/files/xapian-extras-12302.tgz',
      'xapian-extras.tgz',
-     '6094cafb0f9cfaa0b3534efd6fed84f8b4effa1e',
+     '3e2ef5fcf83eb3eae1ac6e99436e40ca501dddae',
      '',
     ),
     ('Xapian extras bindings',
-     'http://xappy.googlecode.com/files/xapian-extras-bindings-12109.tar.gz',
+     'http://xappy.googlecode.com/files/xapian-extras-bindings-12302.tgz',
      'xapian-extras-bindings.tgz',
-     'a43166cc68c2ad5d02596104851116b73acdb539',
+     '20806b9c47753fbc5c7c99356ed617fa06f81afb',
      '',
     ),
 )
