@@ -1,3 +1,7 @@
+Fri Mar 27 13:41:17 GMT 2009  Richard Boulton <richard@lemurconsulting.com>
+
+	* libs/get_xapian.py: Update xapian-extras packages.
+
 Fri Mar 27 12:49:36 GMT 2009  Richard Boulton <richard@lemurconsulting.com>
 
 	* xappy/doctests/indexerconnection_doctest2.txt: Explicitly access
